# singlestoredb-extension-json-flatten

./: Cargo.toml  Makefile  README.md  create_loader.sh  json_flatten.sql  json_flatten.wit  load_extension.sql  load_standalone.sql  pytest.ini
.github/workflows/: deployment.yaml
dbtests/: test_create_function.py
src/: lib.rs
