[package]
name = "json_flatten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }
jsonpath_lib = "0.3.0"
serde = "1.0.197"
serde_json = "1.0.82"

[lib]
crate-type = ["cdylib"]
